# imager-wasm

./: .travis.yaml  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: imager_worker.js  index.js  normalize_worker.js
src/: lib.rs
