[package]
name = "imager-wasm"
version = "0.1.0"
authors = ["Damjan Georgievski <gdamjan@hfour.com>"]
repository = "https://github.com/hfour/imager-wasm"
description = "selected image-rs function into wasm for nodejs"
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "0.2.50"

[dependencies.image]
version = "0.22.2"
default-features = false
features = ["gif_codec", "jpeg", "ico", "png_codec", "pnm", "webp", "bmp"]

[profile.release]
lto = true
